# FrpcTray

./: AGENTS.md  AI_COLLABORATION_GUIDE.md  BACKEND_STATUS.md  BUN_USAGE.md  CLAUDE.md  FRONTEND_STATUS.md  FRONTEND_TO_BACKEND.md  README.md  TOML_FUNCTIONS.md  default.aproj  example.toml  main.aardio  package.json
.agents/skills/tauri-app-clipboard/: SKILL.md
.agents/skills/tauri-app-creator/: SKILL.md
.agents/skills/tauri-app-dialog/: SKILL.md
.agents/skills/tauri-app-file-system/: SKILL.md
.agents/skills/tauri-app-localhost/: SKILL.md
.agents/skills/tauri-app-logging/: SKILL.md
.agents/skills/tauri-app-notification/: SKILL.md
.agents/skills/tauri-app-persisted-scope/: SKILL.md
.agents/skills/tauri-app-plugin-permissions/: SKILL.md
.build/: default.Manifest.xml
.claude/skills/tauri/: SKILL.md
.github/workflows/: release.yml
backend/: .gitignore  AGENT_CONTEXT.md  BACKEND_STATUS.md  Cargo.toml  api_spec.json  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: config.rs  lib.rs  toml_helper.rs  util.rs
backend/src/commands/: backup.rs  config_cmd.rs  frpc.rs  frpc_manager.rs  mod.rs  proxy.rs  server.rs  update.rs
frontend/: AGENT_CONTEXT.md  FRONTEND_STATUS.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  style.css
lib/: config.aardio
src/: App.vue  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.vue  ProxyItem.vue  ProxyList.vue  SettingsPage.vue
src/locales/: zh-CN.json  zh-TW.json
(+191 files in other folders)
